Gitignore updated to remove sass-cache, svg float left

--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -28,6 +28,7 @@
         svg {
             max-width: 100px;
             height: auto;
+            float: left;
         }
 
 		@include breakpoint(small) {
