--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -737,7 +737,8 @@ button,
   color: inherit; }
 #header svg {
   max-width: 100px;
-  height: auto; }
+  height: auto;
+  float: left; }
 @media screen and (max-width: 736px) {
   #header h1 {
     font-size: 2em; }
