Padding added to SVG Logo

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -736,7 +736,8 @@ button,
 #header a {
   color: inherit; }
 #header svg {
-  max-width: 100px;
+  max-width: 90px;
+  padding: 0 40px 0 0;
   height: auto;
   float: left; }
 @media screen and (max-width: 736px) {
