--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -26,7 +26,8 @@
 		}
 
         svg {
-            max-width: 100px;
+            max-width: 90px;
+            padding: 0 40px 0 0;
             height: auto;
             float: left;
         }
