SVG Icon switched to Fontastic, Purchase icons added, hover color changed.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -228,11 +228,11 @@ a {
   -ms-transition: border-bottom-color 0.2s ease, color 0.2s ease;
   transition: border-bottom-color 0.2s ease, color 0.2s ease;
   border-bottom: dotted 1px rgba(255, 255, 255, 0.25);
-  color: #1cb495;
+  color: #3C6890;
   text-decoration: none; }
   a:hover {
     border-bottom-color: transparent;
-    color: #1cb495 !important;
+    color: #3C6890 !important;
     text-decoration: none; }
 
 strong, b {
@@ -428,7 +428,7 @@ form {
       transform: scale(1);
       opacity: 1; }
     form .message.success {
-      color: #1cb495; }
+      color: #3C6890; }
       form .message.success:before {
         content: '\f00c'; }
     form .message.failure {
@@ -550,7 +550,7 @@ textarea {
     -ms-animation: focus 0.1s;
     animation: focus 0.1s;
     background-color: rgba(255, 255, 255, 0.125);
-    border-color: #1cb495; }
+    border-color: #3C6890; }
 
 .select-wrapper {
   text-decoration: none;
@@ -634,14 +634,14 @@ input[type="radio"] {
       width: 1.65em; }
   input[type="checkbox"]:checked + label:before,
   input[type="radio"]:checked + label:before {
-    background: #1cb495;
-    border-color: #1cb495;
+    background: #3C6890;
+    border-color: #3C6890;
     color: #ffffff;
     content: '\f00c'; }
   input[type="checkbox"]:focus + label:before,
   input[type="radio"]:focus + label:before {
-    border-color: #1cb495;
-    box-shadow: 0 0 0 2px #1cb495; }
+    border-color: #3C6890;
+    box-shadow: 0 0 0 2px #3C6890; }
 
 input[type="checkbox"] + label:before {
   border-radius: 6px; }
@@ -683,7 +683,7 @@ button,
   -webkit-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
   -ms-transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out, opacity 0.2s ease-in-out;
-  background-color: #1cb495;
+  background-color: #3C6890;
   border-radius: 6px;
   border: 0;
   color: #ffffff !important;
@@ -701,13 +701,13 @@ button,
   input[type="button"]:hover,
   button:hover,
   .button:hover {
-    background-color: #1fcaa7; }
+    background-color: #4475a2; }
   input[type="submit"]:active,
   input[type="reset"]:active,
   input[type="button"]:active,
   button:active,
   .button:active {
-    background-color: #199e83; }
+    background-color: #355b7e; }
   input[type="submit"].disabled, input[type="submit"]:disabled,
   input[type="reset"].disabled,
   input[type="reset"]:disabled,
