--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -3,25 +3,18 @@
 	pixelarity.com @pixelarity
 	License: pixelarity.com/license
 */
-
 /* BG */
-
-	#bg {
-		-ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=25)";
-	}
+#bg {
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=25)"; }
 
 /* Type */
-
-	body, input, select, textarea {
-		color: #fff;
-	}
+body, input, select, textarea {
+  color: #fff; }
 
 /* Form */
-
-	input[type="text"],
-	input[type="password"],
-	input[type="email"],
-	select,
-	textarea {
-		border: solid 2px #fff;
-	}
+input[type="text"],
+input[type="password"],
+input[type="email"],
+select,
+textarea {
+  border: solid 2px #fff; }
