--- a/assets/css/ie9.css
+++ b/assets/css/ie9.css
@@ -3,10 +3,7 @@
 	pixelarity.com @pixelarity
 	License: pixelarity.com/license
 */
-
 /* Signup Form */
-
-	#signup-form > * {
-		display: inline-block;
-		vertical-align: top;
-	}
+#signup-form > * {
+  display: inline-block;
+  vertical-align: top; }
