--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -39,16 +39,16 @@
 		border2:			rgba(255,255,255,0.25),
 
 		accent: (
-			bg:				#1cb495,
-			fg:				mix(#1cb495, #ffffff, 25%),
+			bg:				#3C6890,
+			fg:				mix(#3C6890, #ffffff, 25%),
 			fg-bold:		#ffffff,
-			fg-light:		mix(#1cb495, #ffffff, 40%),
+			fg-light:		mix(#3C6890, #ffffff, 40%),
 			border:			rgba(255,255,255,0.25),
 			border-bg:		rgba(255,255,255,0.075),
 		),
 
 		positive: (
-			bg:				#1cb495,
+			bg:				#3C6890,
 			fg:				#ffffff
 		),
 
