_forms.scss renamed to _downloads.scss

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -735,7 +735,7 @@ button,
   line-height: 1.65em; }
 #header a {
   color: inherit; }
-#header svg {
+#header i {
   max-width: 80px;
   padding: 0 10px 0 0;
   height: auto;
@@ -750,33 +750,33 @@ button,
     margin: 0 0 1em 0; } }
 
 /* Signup Form */
-#signup-form {
+#downloads {
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
   position: relative; }
-  #signup-form input[type="text"],
-  #signup-form input[type="password"],
-  #signup-form input[type="email"] {
+  #downloads input[type="text"],
+  #downloads input[type="password"],
+  #downloads input[type="email"] {
     width: 18em; }
-  #signup-form > * {
+  #downloads > * {
     margin: 0 0 0 1em; }
-  #signup-form > :first-child {
+  #downloads > :first-child {
     margin: 0 0 0 0; }
   @media screen and (max-width: 480px) {
-    #signup-form {
+    #downloads {
       -moz-flex-direction: column;
       -webkit-flex-direction: column;
       -ms-flex-direction: column;
       flex-direction: column; }
-      #signup-form input[type="type"],
-      #signup-form input[type="password"],
-      #signup-form input[type="email"] {
+      #downloads input[type="type"],
+      #downloads input[type="password"],
+      #downloads input[type="email"] {
         width: 100%; }
-      #signup-form > * {
+      #downloads > * {
         margin: 1.25em 0 0 0; }
-      #signup-form .message {
+      #downloads .message {
         bottom: -1.5em;
         font-size: 0.9em;
         height: 1em;
