--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -25,7 +25,7 @@
 			color: inherit;
 		}
 
-        svg {
+        i {
             max-width: 80px;
             padding: 0 10px 0 0;
             height: auto;
