--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -736,7 +736,7 @@ button,
 #header a {
   color: inherit; }
 #header i {
-  max-width: 80px;
+  font-size: 3.5em;
   padding: 0 10px 0 0;
   height: auto;
   float: left; }
@@ -750,40 +750,26 @@ button,
     margin: 0 0 1em 0; } }
 
 /* Signup Form */
-#signup-form {
+#downloads {
   display: -moz-flex;
   display: -webkit-flex;
   display: -ms-flex;
   display: flex;
   position: relative; }
-  #signup-form input[type="text"],
-  #signup-form input[type="password"],
-  #signup-form input[type="email"] {
-    width: 18em; }
-  #signup-form > * {
+  #downloads > * {
     margin: 0 0 0 1em; }
-  #signup-form > :first-child {
+  #downloads > :first-child {
     margin: 0 0 0 0; }
+  #downloads li {
+    display: inline; }
   @media screen and (max-width: 480px) {
-    #signup-form {
+    #downloads {
       -moz-flex-direction: column;
       -webkit-flex-direction: column;
       -ms-flex-direction: column;
       flex-direction: column; }
-      #signup-form input[type="type"],
-      #signup-form input[type="password"],
-      #signup-form input[type="email"] {
-        width: 100%; }
-      #signup-form > * {
-        margin: 1.25em 0 0 0; }
-      #signup-form .message {
-        bottom: -1.5em;
-        font-size: 0.9em;
-        height: 1em;
-        left: 0;
-        line-height: inherit;
-        margin-top: 0;
-        position: absolute; } }
+      #downloads > * {
+        margin: 1.25em 0 0 0; } }
 
 /* Footer */
 #footer {
