--- a/assets/sass/layout/_header.scss
+++ b/assets/sass/layout/_header.scss
@@ -26,7 +26,7 @@
 		}
 
         i {
-            max-width: 80px;
+            font-size: 3.5em;
             padding: 0 10px 0 0;
             height: auto;
             float: left;
