--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -760,6 +760,8 @@ button,
     margin: 0 0 0 1em; }
   #downloads > :first-child {
     margin: 0 0 0 0; }
+  #downloads ul {
+    margin-left: 0; }
   #downloads li {
     display: inline;
     font-size: 2em; }
