--- a/assets/sass/layout/_downloads.scss
+++ b/assets/sass/layout/_downloads.scss
@@ -28,6 +28,10 @@
 			margin: 0 0 0 0;
 		}
 
+        ul {
+            margin-left: 0;
+        }
+
         li {
             display: inline;
             font-size: 2em;
