--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -766,7 +766,7 @@ button,
     display: inline;
     font-size: 2em; }
   #downloads li:first-of-type {
-    margin-left: 0; }
+    padding-left: 0; }
   #downloads a:link {
     border-bottom: none; }
   @media screen and (max-width: 480px) {
