Available on text style changes

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -767,6 +767,10 @@ button,
     font-size: 2em; }
   #downloads li:first-of-type {
     padding-left: 0; }
+  #downloads strong {
+    float: left;
+    margin-top: 3px;
+    font-size: 1.1em; }
   #downloads a:link {
     border-bottom: none; }
   @media screen and (max-width: 480px) {
