--- a/assets/sass/layout/_downloads.scss
+++ b/assets/sass/layout/_downloads.scss
@@ -41,6 +41,12 @@
             padding-left: 0;
         }
 
+        strong {
+            float: left;
+            margin-top: 3px;
+            font-size: 1.1em;
+        }
+
         a:link {
             border-bottom: none;
         }
