--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,7 +74,7 @@ body {
   -webkit-justify-content: center;
   -ms-justify-content: center;
   justify-content: center;
-  background-color: #000;
+  background-color: #0b0807;
   padding: 6em 4em 4em 4em; }
   body > * {
     position: relative;
