Background opacity change

--- a/assets/sass/libs/_vars.scss
+++ b/assets/sass/libs/_vars.scss
@@ -30,7 +30,7 @@
 
 // Palette.
 	$palette: (
-		bg:					rgba(11, 8, 7, 1.00),
+		bg:					#000,
 		fg:					rgba(255,255,255,0.75),
 		fg-bold:			#fff,
 		fg-light:			rgba(255,255,255,0.5),
