--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -74,7 +74,7 @@ body {
   -webkit-justify-content: center;
   -ms-justify-content: center;
   justify-content: center;
-  background-color: #0b0807;
+  background-color: #000;
   padding: 6em 4em 4em 4em; }
   body > * {
     position: relative;
@@ -106,7 +106,7 @@ body {
   transition: opacity 2s ease-in-out;
   height: 100%;
   left: 0;
-  opacity: 0.25;
+  opacity: 0.75;
   position: fixed;
   top: 0;
   width: 100%;
