"Available" size change for mobile.

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -770,7 +770,7 @@ button,
   #downloads strong {
     float: left;
     margin-top: 3px;
-    font-size: 1em; }
+    font-size: 1.1em; }
   #downloads a:link {
     border-bottom: none; }
   @media screen and (max-width: 480px) {
@@ -780,7 +780,11 @@ button,
       -ms-flex-direction: column;
       flex-direction: column; }
       #downloads > * {
-        margin: 1.25em 0 0 0; } }
+        margin: 1.25em 0 0 0; }
+      #downloads strong {
+        float: left;
+        margin-top: 3px;
+        font-size: .8em; } }
 
 /* Footer */
 #footer {
