--- a/assets/sass/layout/_downloads.scss
+++ b/assets/sass/layout/_downloads.scss
@@ -44,7 +44,7 @@
         strong {
             float: left;
             margin-top: 3px;
-            font-size: 1em;
+            font-size: 1.1em;
         }
 
         a:link {
@@ -63,6 +63,12 @@
 			> * {
 				margin: 1.25em 0 0 0;
 			}
+
+            strong {
+                float: left;
+                margin-top: 3px;
+                font-size: .8em;
+            }
 
 //			.message {
 //				bottom: -1.5em;
